5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1582_994.log
== TEST (2019-03-12 17:25:47) 
-- CODE:
print(Universidade Federal do Amazonas)

-- ERROR:
File "XXXX", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:26:06) 
-- CODE:
print("Universidade Federal do Amazonas")

-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:26:11) 
-- CODE:
print("Universidade Federal do Amazonas")

-- EXECUTION TIME:
0.135802
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:40:24) 
-- CODE:
print("Universidade Federal do Amazonas")

-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
